# datadog-logging

./: .coveragerc  .gitreview  .testr.conf  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
datadog_logging/: __init__.py  base.py  common.py  request_handler.py  statsd_handler.py  version.py
datadog_logging/tests/: base.py  test_datadog_logging.py
datadog_logging/tests/functional/: base.py  test_datadog.py
datadog_logging/tests/functional/cassettes/: datadog_logging.tests.functional.test_datadog.TestDatadogLogging.test_send_warning_message.yml
datadog_logging/tests/unit/: base.py  test_datadog_logging.py  test_datadog_request_logging.py  test_datadog_statsd_logging.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
releasenotes/source/: conf.py  index.rst
